@@ -11,6 +11,8 @@ var Connection = exports.Connection = function(id, socketOptions) {
   EventEmitter.call(this);
   // Store all socket options
   this.socketOptions = socketOptions ? socketOptions : {host:'localhost', port:27017};
+  // Set keep alive default if not overriden
+  if(!this.socketOptions.keepAlive) this.socketOptions.keepAlive = 100;
   // Id for the connection
   this.id = id;
   // State of the connection
